# Clouisle

./: .gitignore  AGENT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  main.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: knowledge_bases.py  login.py  models.py  permissions.py  roles.py  site_settings.py  team_models.py  teams.py  upload.py  users.py
backend/app/core/: captcha.py  celery.py  config.py  email.py  i18n.py  init_data.py  login_security.py  password.py  redis.py  security.py  timezone.py
backend/app/llm/: __init__.py  errors.py  manager.py
backend/app/llm/adapters/: __init__.py
backend/app/llm/adapters/audio/: __init__.py  base.py  openai_stt.py  openai_tts.py
backend/app/llm/adapters/chat/: __init__.py  factory.py
backend/app/llm/adapters/embedding/: __init__.py  factory.py
backend/app/llm/adapters/image/: __init__.py  base.py  openai.py
backend/app/llm/tools/: __init__.py  registry.py
backend/app/llm/types/: __init__.py  audio.py  base.py  chat.py  image.py  video.py
backend/app/models/: __init__.py  knowledge_base.py  model.py  site_setting.py  user.py
backend/app/schemas/: captcha.py  knowledge_base.py  model.py  response.py  site_setting.py  team.py  user.py  verification.py
backend/app/services/: __init__.py  document_processor.py  usage_tracker.py  vector_store.py
backend/app/tasks/: __init__.py  knowledge_base.py  usage.py
deploy/: docker-compose.yml
docs/: CHANGELOG.md  README_zh-CN.md
docs/api/: BACKEND_API.md
docs/design/: KNOWLEDGE_BASE_SPEC.md  LLM_SPEC.md  RBAC_SPEC.md  TEAM_MODEL_AUTH_SPEC.md
frontend/: package.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/components/: component-example.tsx  language-toggle.tsx  locale-switcher.tsx  settings-drawer.tsx  site-branding.tsx  team-switcher.tsx  theme-toggle.tsx
frontend/contexts/: index.ts  site-settings-context.tsx  team-context.tsx
(+133 files in other folders)
